# push-pratice

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  main.py  pyproject.toml
app/: main.py  worker.py
app/api/: dlq.py  push.py
app/core/: config.py  database.py  redis.py
app/schemas/: dlq.py  push.py
app/services/: fake_fcm.py  idempotency.py
app/tasks/: push.py
docs/: api.md  architecture.md  database.md  messaging.md  push.md  testing.md
tests/e2e/: conftest.py  test_dlq_api.py  test_idempotency_concurrency.py  test_push_api.py  test_worker_crash.py
tests/unit/: test_dlq_api.py  test_fake_fcm.py  test_idempotency.py  test_push_api.py  test_push_task.py
