[project]
name = "push-pratice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.6.3",
    "fastapi[standard]>=0.138.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.19",
    "supabase>=2.31.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "anyio>=4.14.0",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-html>=4.2.0",
    "pytest-mock>=3.15.1",
]
